--- a/src/pages/forms/login.module.css
+++ b/src/pages/forms/login.module.css
@@ -6,14 +6,14 @@
 
 .hor {
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  height: 130vh;
+  grid-template-columns: 1.2fr 2fr;
+  height: 100vh;
   width: 100vw;
 }
 
 .hor-one {
   /* background-color: pink; */
-  background-image: url(../assets/water.jpg);
+  background-image: url(../../assets/images/freeWater.jpg);
   background-size: cover;
 }
 
@@ -34,6 +34,13 @@
   /* justify-content: center; */
 }
 
+.xzc {
+  display: flex;
+  align-items: center;
+  gap: 7.3rem;
+  margin-top: 2rem;
+}
+
 .heading-three {
   font-size: 3rem;
   font-weight: 300;
@@ -43,7 +50,7 @@
 .tag {
   font-size: 0.8rem;
   color: rgba(0, 0, 0, 0.687);
-  margin-bottom: 1.6rem;
+  margin-bottom: 1.2rem;
 }
 
 input[type="radio"] {
@@ -131,13 +138,7 @@ input[type="radio"]:checked + .nl-two:before {
 }
 
 .jiti {
-  margin-top: 3rem;
-  display: flex;
-  flex-direction: column;
-}
-
-.cli {
-  margin-top: 1rem;
+  /* margin-top: 3rem; */
   display: flex;
   flex-direction: column;
 }
@@ -151,9 +152,7 @@ input[type="radio"]:checked + .nl-two:before {
 
 .koko {
   /* height: 4rem; */
-  width: 18rem;
-  height: 1.5rem;
-  font-size: 1.5rem;
+  width: 70%;
   /* margin-top: 2rem; */
 }
 
@@ -168,25 +167,20 @@ input[type="radio"]:checked + .nl-two:before {
 }
 
 .ln {
-  margin-left: 7.5rem;
-  margin-top: 1.5rem;
+  /* margin-left: 7.5rem; */
+  /* margin-top: 1.5rem; */
   padding: 0.8rem 1.6rem;
   background-color: mediumslateblue;
   border: none;
   color: #fff;
   border-radius: 6px;
-  cursor: pointer;
-}
-
-.cc {
-  background-color: red;
 }
 
 .lp {
   /* height: 100vh; */
   width: 80%;
   position: absolute;
-  top: 60%;
+  top: 43%;
   left: 62%;
   transform: translate(-60%, -50%);
 }
@@ -208,7 +202,7 @@ input[type="radio"]:checked + .nl-two:before {
   /* width: 3rem; */
   /* height: 8rem; */
   /* background-color: black; */
-  margin-top: 47rem;
+  margin-top: 36rem;
 }
 
 .oi {
@@ -216,6 +210,28 @@ input[type="radio"]:checked + .nl-two:before {
   justify-content: space-between;
   align-items: center;
   margin-top: 1rem;
+}
+
+.gdg {
+  margin-top: 0.5rem;
+  display: inline-block;
+  text-decoration: none;
+  color: rgb(98, 98, 252);
+  font-weight: 600;
+}
+
+.mbn {
+  display: flex;
+  gap: 0.7rem;
+  align-items: center;
+  /* justify-content: center; */
+}
+
+input[type="checkbox"] {
+  height: 1rem;
+  width: 1rem;
+  /* display: block; */
+  /* border: 2px solid gray; */
 }
 
 .oi-two {
@@ -229,25 +245,4 @@ input[type="radio"]:checked + .nl-two:before {
 .pp {
   color: black;
   text-decoration: none;
-}
-
-.ii {
-  height: 1rem;
-  width: 1rem;
-  position: relative;
-  right: 1.5rem;
-}
-
-.mn {
-  display: flex;
-  flex-direction: column;
-  margin-top: 1rem;
-}
-
-.hh {
-  color: red;
-}
-
-.mp {
-  margin-top: 2rem;
 }
