--- a/src/pages/home/features.module.css
+++ b/src/pages/home/features.module.css
@@ -1,36 +1,36 @@
-.jito {
+.link-group {
   padding: 0.5rem 1rem;
   color: #fff;
 }
 
-.jito-two {
+.link-tag {
   color: #fff;
   text-decoration: none;
   font-weight: 700;
 }
 
-.box {
+.features-container {
   height: 110vh;
   width: 100vw;
   display: grid;
   grid-template-columns: 1fr 1fr;
 }
 
-.go {
+.features-container-one {
   /* background-color: aquamarine; */
-  background-image: url(../assets/light-blue.jpg);
+  background-image: url(../../assets/images/light-blue.jpg);
   background-size: cover;
   position: relative;
 }
 
-.line {
+.line-small-one {
   background-color: lightgreen;
   width: 3rem;
   border: 0.5px solid lightgreen;
   margin-bottom: 2rem;
 }
 
-.pos {
+.main-body-one {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -38,14 +38,14 @@
   width: 70%;
 }
 
-.jo {
+.heading-secondary {
   font-weight: 700;
   font-size: 1.1rem;
   color: #fff;
   margin-bottom: 0.3rem;
 }
 
-.heading-two {
+.heading-primary {
   color: #fff;
   font-size: 3rem;
   line-height: 1.3;
@@ -53,19 +53,19 @@
   margin-bottom: 2rem;
 }
 
-.ul {
+.list-item {
   margin-bottom: 1.5rem;
   color: white;
   font-size: 0.9rem;
 }
 
-.fo {
+.link-box {
   display: flex;
   gap: 1.6rem;
   margin-top: 3rem;
 }
 
-.vito {
+.link-tag-two {
   background-color: #fff;
   padding: 0.7rem 1.4rem;
   border-radius: 3.5px;
@@ -73,7 +73,7 @@
   color: rgb(94, 210, 249);
 }
 
-.vito-two {
+.link-tag-three {
   background-color: rgb(94, 210, 249);
   padding: 0.7rem 1.4rem;
   border-radius: 3.5px;
@@ -83,11 +83,11 @@
 }
 /* Second vo styling */
 
-.vo {
+.features-container-two {
   position: relative;
 }
 
-.pos-two {
+.main-body-two {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -95,9 +95,9 @@
   width: 70%;
 }
 
-.vo {
+.features-container-two {
   /* background-color: lightblue; */
-  background-image: url(../assets/green.jpg);
+  background-image: url(../../assets/images/green.jpg);
   background-size: cover;
 }
 
@@ -118,13 +118,13 @@
   text-decoration: none;
 }
 
-.line-two {
+.line-small-two {
   background-color: blue;
   width: 3rem;
   border: 0.5px solid blue;
   margin-bottom: 2rem;
 }
 
-.coco {
-  width: 90%;
+.heading-group {
+  width: 80%;
 }
