--- a/src/pages/forms/createAccount.module.css
+++ b/src/pages/forms/createAccount.module.css
@@ -216,3 +216,15 @@ input[type="radio"]:checked + .form-label-two:before {
 .text-indicator {
   color: red;
 }
+
+.error-text {
+  font-size: 3rem;
+  font-weight: 700;
+  color: red;
+}
+
+.success-text {
+  font-size: 3rem;
+  font-weight: 700;
+  color: rgb(1, 187, 1);
+}
