--- a/src/pages/forms/login.module.css
+++ b/src/pages/forms/login.module.css
@@ -146,3 +146,15 @@
   text-decoration: none;
   color: blue;
 }
+
+.success-text {
+  font-weight: 700;
+  font-size: 3rem;
+  color: rgb(0, 187, 0);
+}
+
+.error-text {
+  font-weight: 700;
+  font-size: 3rem;
+  color: red;
+}
